--- a/css/style.css
+++ b/css/style.css
@@ -217,8 +217,8 @@ section {
 }
 
 .about .row .info-container .box-container .box h3 span {
-  color: #aaa;
-  font-weight: lighter;
+  color: #ffffff;
+  font-weight: normal;
 }
 
 .about .row .count-container {
